[package]
name = "qubit_matmul"
version = "0.1.0"
edition = "2021"

[lib]
name = "qubit_matmul"
crate-type = ["cdylib"]

[features]
default = ["sparse"]
sparse = ["sprs"]

[dependencies]
pyo3 = { version = "^0.19", features = ["extension-module"] }
numpy = "^0.19"
num-complex = "^0.4"
num-traits = "^0.2"
rayon = "^1.7"
sprs = {version = "^0.11", optional = true}

[dependencies.qip-iterators]
version = "^1.4"