[package]
name = "qubit_matmul"
version = "0.1.0"
edition = "2021"

[lib]
name = "qubit_matmul"
crate-type = ["cdylib"]

[features]
default = ["sparse"]
sparse = ["sprs"]

[dependencies]
pyo3 = { version = "^0.19", features = ["extension-module", "multiple-pymethods", "num-complex"] }
numpy = "^0.19"
num-complex = "*"
num-traits = "*"
rayon = "^1.8"
sprs = {version = "^0.11", optional = true}

[dependencies.qip-iterators]
version = "^1.4"